# actor-framework

./: .gitmodules  CMakeLists.txt  CMakePresets.json  PreLoad.cmake  actor.c  actor.h  mempool.h  state_machine.h
include/: actor.h  event.h  mempool.h  ps.h  state_machine.h
src/: actor.c  event.c  mempool.c  ps.c  state_machine.c
